[project]
name = "gibberish-chat-detector"  # PyPI name (with hyphens)
version = "0.1.0"
description = "Detects gibberish or mischievous chat messages/string."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Jiangang Hao", email = "jianganghao@gmail.com"}]
dependencies = ["numpy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"